--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ h4 {
   position: fixed;
   top: 6.5em;
   right: 4em;
-  width: 240px;
+  width: 280px;
   height: 100px;
+  padding: 1em;
+  text-align: center;
+  line-height: 1.4em;
   border: 4px dotted black;
   background-color: #f7f7f7;
   z-index: -99;
@@ -46,18 +49,29 @@ h4 {
 
 #tooltip {
   position: fixed;
-  top: 6.5em;
-  right: 4em;
-  width: 240px;
-  height: 100px;
   background: white;
-  border: 4px dotted black;
+  border: 2px dotted black;
+  stroke-linecap: round;
   padding: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: none;
 }
 
-.tooltip-p {
+#infobox {
+  position: fixed;
+  top: 6.5em;
+  right: 4em;
+  width: 300px;
+  height: 140px;
+  background: white;
+  border: 4px dotted black;
+  stroke-linecap: round;
+  padding: 1em;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+#infobox-p {
 font-size: small;
 }
 .dot-circle {
