--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   font-family: Arial, sans-serif;
 }
 
@@ -73,11 +72,11 @@ font-size: small;
 }
 
 .svg-container {
-  position: inherit;
-  left: 50%;
-  right: 50%;
-  height: 100vh;
-  width: 150vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 #tooltip {
@@ -109,4 +108,10 @@ font-size: small;
   stroke-dasharray: 0 5;
   stroke-linecap: round;
   transform: scale(1.4);
+}
+
+@media screen and (max-width: 720px) {
+  .rectangle, #infobox {
+    width: 150px;
+  }
 }
