--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h4 {
 .rectangle, #infobox {
   position: fixed;
   top: 6.5em;
-  right: 4em;
+  right: 2em;
   width: 300px;
   padding: 1em;
   text-align: center;
@@ -32,7 +32,7 @@ h4 {
 
 #infobox {
   display: none;
-  z-index: 1111;
+  z-index: 11;
 }
 
 #infobox-p {
@@ -53,7 +53,7 @@ font-size: small;
   flex-wrap: wrap;
   align-content: flex-start;
   padding-left: 1.6em;
-  width: 30%;
+  width: 40%;
 }
 
 .tag {
@@ -108,6 +108,13 @@ font-size: small;
   stroke-dasharray: 0 5;
   stroke-linecap: round;
   transform: scale(1.4);
+}
+
+.dot-circle.highlighted {
+  stroke-width: 3px;
+  stroke: black;
+  stroke-dasharray: 0 5;
+  stroke-linecap: round;
 }
 
 @media screen and (max-width: 720px) {
